--- a/LakshmiAcademic.html
+++ b/LakshmiAcademic.html
@@ -16,7 +16,7 @@
        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
      </td>
      <td>
-       <a href="LakshmiHome.html"><input  id="intro" type="submit" name="" value="About Me"></a>
+       <a href="index.html"><input  id="intro" type="submit" name="" value="About Me"></a>
        <a href="LakshmiResume.html"><input id="intro" type="submit" name="" value="Resume"></a>
        <a href="LakshmiProject.html"><input id="intro" type="submit" name="" value="Work"></a>
        <a href="LakshmiAcademic.html"><input id="intro" type="submit" name="" value="Academia"></a>
