--- a/LakshmiContact.html
+++ b/LakshmiContact.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="LakshmiHome.css">
   </head>
   <body id='lakshmi' >
-    <h1 id='name' <a href="LakshmiHome.html">Lakshmi R Pillai</a></h1>
+    <h1 id='name' <a href="index.html">Lakshmi R Pillai</a></h1>
     <div id='connect'>
     <table id='connect'><tr>
       <td>
@@ -16,7 +16,7 @@
        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
      </td>
      <td>
-       <a href="LakshmiHome.html"><input  id="intro" type="submit" name="" value="About Me"></a>
+       <a href="index.html"><input  id="intro" type="submit" name="" value="About Me"></a>
        <a href="LakshmiResume.html"><input id="intro" type="submit" name="" value="Resume"></a>
        <a href="LakshmiProject.html"><input id="intro" type="submit" name="" value="Work"></a>
        <a href="LakshmiAcademic.html"><input id="intro" type="submit" name="" value="Academia"></a>
