--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        <td>&nbsp;</td>
        <td>&nbsp;</td>
       <td>
-      <a href="LakshmiHome.html"><input  id="intro" 7type="submit" name="" value="About Me"></a>
+      <a href="index.html"><input  id="intro" 7type="submit" name="" value="About Me"></a>
       <a href="LakshmiResume.html"><input id="intro" type="submit" name="" value="Resume"></a>
       <a href="LakshmiProject.html"><input id="intro" type="submit" name="" value="Work"></a>
       <a href="LakshmiAcademic.html"><input id="intro" type="submit" name="" value="Academia"></a>
