--- a/LakshmiResume.html
+++ b/LakshmiResume.html
@@ -24,7 +24,7 @@
        <a href="LakshmiContact.html"><input id="intro" type="submit" name="" value="Contact"></a>
    </td></tr>
     </table>
-    <form method="get" action="C:\Users\user1\Desktop\Django-Python\My projects\LAKSHMI R PILLAI_resume_v01.pdf">
+    <form method="get" action="LAKSHMI R PILLAI_resume_v01.pdf">
        <button id='resume' type="submit">Download A Copy!</button>
     </form>
 <!--<a id='resume'href="C:\Users\user1\Desktop\Django-Python\My projects\LAKSHMI R PILLAI_resume_v01.pdf">Resume</a>-->
