--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <tr>
       <td></td><td></td>
       <td>
-      <a href="www.linkedin.com/in/lakshmi-pillai-3a534964" ><img src='https://upload.wikimedia.org/wikipedia/commons/thumb/e/e9/Linkedin_icon.svg/384px-Linkedin_icon.svg.png' width="30px" height="30px" /></a>
+      <a href="https://linkedin.com/in/lakshmi-pillai-3a534964" ><img src='https://upload.wikimedia.org/wikipedia/commons/thumb/e/e9/Linkedin_icon.svg/384px-Linkedin_icon.svg.png' width="30px" height="30px" /></a>
       <a href="https://github.com/LAKSHMIRPILLAI" ><img src='https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Font_Awesome_5_brands_github.svg/93px-Font_Awesome_5_brands_github.svg.png' width="30px" height="30px" /></a>
       <a href="https://codepen.io/lakshmirpillai" ><img src='https://res-2.cloudinary.com/crunchbase-production/image/upload/c_lpad,h_170,w_170,f_auto,b_white,q_auto:eco/v1414401651/mbjudetffvz7usfn6m0x.png' width="30px" height="30px" /></a>
       </td>
