--- a/LakshmiContact.html
+++ b/LakshmiContact.html
@@ -27,12 +27,12 @@
    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <td>
   <h1><id='userinputcontact'>Get In Touch!</h1>
-<form action="mailto:luxmi.r.pillai@gmail.com?subject= Mail from #textbox1contact &message= $textbox4contact" method="post" enctype="text/plain">
-  <p><input id="textbox1contact" type="text" name="" placeholder="Name""></p>
-  <p><input id="textbox2contact" type="text" name="" placeholder="Email""></p>
-  <p><input id="textbox3contact" type="email" name="" placeholder="Phone""><p/>
-  <p><input id="textbox4contact" type=textarea name="" placeholder="Type your message here""></p>
-  <input type="submit" name="" value="Submit">
+<form action="lakshmiform.php" method="POST" >
+  <p><input id="textbox1contact" type="text" name="name" placeholder="Name"></p>
+  <p><input id="textbox2contact" type="email" name="email" placeholder="Email"></p>
+  <p><input id="textbox3contact" type="text" name="phone" placeholder="Phone"><p/>
+  <p><input id="textbox4contact" type="textarea" name="text1" placeholder="Type your message here"></p>
+  <input type="submit" name="" value="Submit"><input type="reset" value="Clear">
 </form>
   </td>
   <td>
