--- a/LakshmiContact.html
+++ b/LakshmiContact.html
@@ -27,7 +27,7 @@
    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <td>
   <h1><id='userinputcontact'>Get In Touch!</h1>
-<form action="lakshmiform.php" method="GET" >
+<form method="POST" target="_blank">
   <p><input id="textbox1contact" type="text" name="name" placeholder="Name"></p>
   <p><input id="textbox2contact" type="email" name="email" placeholder="Email"></p>
   <p><input id="textbox3contact" type="text" name="phone" placeholder="Phone"><p/>
