--- a/LakshmiContact.html
+++ b/LakshmiContact.html
@@ -27,7 +27,7 @@
    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <td>
   <h1><id='userinputcontact'>Get In Touch!</h1>
-<form method="POST" target="_blank">
+<form method="POST" target="_blank" action="https://app.99inbound.com/f/f2e0a6fd-0060-4578-90ff-89bb9a96e65a">
   <p><input id="textbox1contact" type="text" name="name" placeholder="Name"></p>
   <p><input id="textbox2contact" type="email" name="email" placeholder="Email"></p>
   <p><input id="textbox3contact" type="text" name="phone" placeholder="Phone"><p/>
