--- a/Thankyou.html
+++ b/Thankyou.html
@@ -2,9 +2,44 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Contact</title>
+    <link rel="stylesheet" href="LakshmiHome.css">
   </head>
-  <body>
- <h1>Thankyou!</h1>
-  </body>
+  <body id='lakshmi' >
+    <h1 id='name' <a href="LakshmiHome.html">Lakshmi R Pillai</a></h1>
+    <div id='connect'>
+    <table id='connect'><tr>
+      <td>
+       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+     </td>
+     <td>
+       <a href="LakshmiHome.html"><input  id="intro" type="submit" name="" value="About Me"></a>
+       <a href="LakshmiResume.html"><input id="intro" type="submit" name="" value="Resume"></a>
+       <a href="LakshmiProject.html"><input id="intro" type="submit" name="" value="Work"></a>
+       <a href="LakshmiAcademic.html"><input id="intro" type="submit" name="" value="Academia"></a>
+       <a href="LakshmiContact.html"><input id="intro" type="submit" name="" value="Contact"></a>
+   </td></tr>
+    <tr>
+  <td>
+   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <td>
+  <h1>Thank you!!!</h1>
+
+  </td>
+  <td>
+   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+ </td>
+ <td>
+
+</td>
+
+</tr></table>
+<h4 id='copyright'>&#169;Lakshmi R Pillai 2020</h4>
+   </div>
 </html>
