--- a/LakshmiContact.html
+++ b/LakshmiContact.html
@@ -27,13 +27,12 @@
    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <td>
   <h1><id='userinputcontact'>Get In Touch!</h1>
-<form method="POST" target="_blank" action="Thankyou.html">
   <p><input id="textbox1contact" type="text" name="name" placeholder="Name"></p>
   <p><input id="textbox2contact" type="email" name="email" placeholder="Email"></p>
   <p><input id="textbox3contact" type="text" name="phone" placeholder="Phone"><p/>
   <p><input id="textbox4contact" type="textarea" name="text1" placeholder="Type your message here"></p>
-  <input type="submit" name="" value="Submit"><input type="reset" value="Clear">
-</form>
+  <a href="Thankyou.html"><input type="submit" name="" value="Submit"></a><input type="reset" value="Clear">
+
   </td>
   <td>
    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
