--- a/LakshmiContact.html
+++ b/LakshmiContact.html
@@ -27,12 +27,7 @@
    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <td>
   <h1><id='userinputcontact'>Get In Touch!</h1>
-  <p><input id="textbox1contact" type="text" name="name" placeholder="Name"></p>
-  <p><input id="textbox2contact" type="email" name="email" placeholder="Email"></p>
-  <p><input id="textbox3contact" type="text" name="phone" placeholder="Phone"><p/>
-  <p><input id="textbox4contact" type="textarea" name="text1" placeholder="Type your message here"></p>
-  <a href="Thankyou.html"><input type="submit" name="" value="Submit"></a><input type="reset" value="Clear">
-
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfkZVJ2S4RFVW0SdEGXyJ2L5hXb4K6WpFIa2Vnopldd8G0hYw/viewform?embedded=true" width="640" height="1200" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
   </td>
   <td>
    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
